// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots should not render without permissions 1`] = `
<div>
  Error because Redirect
</div>
`;

exports[`Snapshots should render correctly 1`] = `
<div
  className="details "
>
  <div
    className="details__header"
  >
    <h2
      className="details__title"
    >
      Title
    </h2>
  </div>
  <div
    className="details__content bootstrap-inside"
  >
    <form>
      <div>
        Actions buttons
      </div>
    </form>
  </div>
</div>
`;

exports[`Snapshots should render correctly without schema props 1`] = `
<div
  className="details "
>
  <div
    className="details__header"
  >
    <h2
      className="details__title"
    >
      CRUD.details.noFeature
    </h2>
  </div>
  <div
    className="details__content bootstrap-inside"
  >
    <div>
      Actions buttons
    </div>
  </div>
</div>
`;
